replace empty selection text with "no image selected" in hero admins

--- a/static/css/admin/discovery.css
+++ b/static/css/admin/discovery.css
@@ -82,6 +82,7 @@
 .dynamic-modules .field-icon li div label {
     color: transparent;
     display: block;
+    width: inherit;
 }
 
 .dynamic-modules .field-icon li:first-child div label {
