fixed white rectangle is displayed below menu that doesn't have sub menu

--- a/src/olympia/devhub/templates/devhub/nav.html
+++ b/src/olympia/devhub/templates/devhub/nav.html
@@ -28,7 +28,7 @@
         </ul>
       </li>
     {% endif %}
-    <li>
+    <li class="nomenu">
       <a href="https://extensionworkshop.com/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=devhub-menu-link">
         {{ _('Extension Workshop') }}</a></li>
     <li>
