--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -450,6 +450,10 @@ body:not(.home) .amo-header,
       width: 200px;
       z-index: 62;
     }
+
+    &.nomenu:hover:after {
+      display: none;
+    }
   }
 }
 
