fixed nav menu isn’t highlighted with kanji characters in devhub

--- a/src/olympia/devhub/templates/devhub/includes/addons_edit_nav.html
+++ b/src/olympia/devhub/templates/devhub/includes/addons_edit_nav.html
@@ -27,7 +27,7 @@
   <div class="highlight" id="edit-addon-nav">
     <ul class="refinements">
       {% for url, title in urls %}
-        <li {% if url in request.path %}class="selected"{% endif %}>
+        <li {% if url in request.path|urlencode %}class="selected"{% endif %}>
           <a href="{{ url }}">{{ title }}</a></li>
       {% endfor %}
     </ul>
