Allow admins to reset API keys for a developer or group of developers (#12319)
Allow admins to reset API keys for a developer or group of developers

This includes the API Credentials Confirmation state, so any affected
developers will have to go through the email confirmation again.

--- a/src/olympia/users/templates/admin/users/userprofile/change_form.html
+++ b/src/olympia/users/templates/admin/users/userprofile/change_form.html
@@ -10,9 +10,11 @@
               They have to be *after* the other submit buttons, otherwise they
               could become the default submit button of the page
              {% endcomment %}
-             {% if can_ban %}
+             {% if has_users_edit_permission %}
                  <button formaction="{% url 'admin:users_userprofile_ban' original.pk|admin_urlquote %}"
                          type="submit">{% trans "Ban" %}</button>
+                 <button formaction="{% url 'admin:users_userprofile_reset_api_key' original.pk|admin_urlquote %}"
+                         type="submit">{% trans "Reset API Key" %}</button>
              {% endif %}
              <button formaction="{% url 'admin:users_userprofile_delete_picture' original.pk|admin_urlquote %}"
                      type="submit">{% trans "Delete picture" %}</button>
