--- a/src/olympia/reviewers/templates/reviewers/abuse_reports.html
+++ b/src/olympia/reviewers/templates/reviewers/abuse_reports.html
@@ -8,8 +8,12 @@
   <hgroup>
     <h2>{{_('Abuse Reports for {addon} and its developers ({num})')|format_html(addon=addon.name, num=reports.paginator.count|numberfmt) }}</h2>
   </hgroup>
-  {% include 'reviewers/addon_details_box.html' %}
+  {% with reports=None %}
+    {# Include the addon details box, but without the abuse reports as we show them below #}
+    {% include 'reviewers/addon_details_box.html' %}
+  {% endwith %}
   <h3>{{ _('Abuse Reports') }}</h3>
+  {{ reports|paginator }}
   {% include "reviewers/includes/abuse_reports_list.html" %}
   {{ reports|paginator }}
 {% endblock %}
