--- a/src/olympia/ratings/templates/ratings/reviews_link.html
+++ b/src/olympia/ratings/templates/ratings/reviews_link.html
@@ -4,7 +4,7 @@
 {% endif %}
 
 <p class="addon-rating">
-  {% with num=addon.total_ratings %}
+  {% with num=addon.text_ratings_count %}
     {% if num %}
     {{ addon.average_rating|float|stars }}
     <a href="{{ base|absolutify }}">
