Hide the source code upload form by default Fixes #9140

--- a/static/css/devhub/submission.less
+++ b/static/css/devhub/submission.less
@@ -82,6 +82,11 @@ ol.submit-addon-progress.unlisted {
     margin-bottom: 1em;
 }
 
+.addon-submission-process #option_yes_source,
+.addon-submission-process #option_no_source {
+    display: none;
+}
+
 div.done-next-steps {
     p {
         margin-bottom: .3em;
