devhub changes - components and content

--- a/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
@@ -1,6 +1,6 @@
-<section class="DevHub-Overview content scheme-medium">
+<section class="DevHub-Banner content scheme-light">
   <div>
-    <h1>{{ _('Customize Firefox') }}</h1>
+    <h1>{{ _('Build best-in-class extensions and themes') }}</h1>
     <p>
       {% trans %}
         Whether you’re new to extension development, polishing up or porting an
@@ -8,6 +8,6 @@
         we’ve got the resources to support you.
       {% endtrans %}
     </p>
-    <a href="https://extensionworkshop.com" class="Button Button--primary">{{ _('Learn how to make an extension') }}</a>
+    <a href="https://extensionworkshop.com" class="">{{ _('Visit the Extension Workshop') }}</a>
   </div>
 </section>
