--- a/src/olympia/devhub/templates/devhub/new-landing/components/footer.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="DevHub-Footer content show-on-desktop {% if user_authenticated %}scheme-light{% endif %}">
+<footer class="DevHub-Footer content show-on-desktop">
   <div>
     <h3 class="DevHub-Footer-sections-header">{{ _('Resources') }}</h3>
 
