--- a/src/olympia/devhub/templates/devhub/new-landing/components/submit_or_manage_extension.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/submit_or_manage_extension.html
@@ -1,6 +1,6 @@
-<section class="DevHub-publish-addon content scheme-default">
+<section class="DevHub-submit-addon content scheme-default">
   <div class="DevHub-content-container">
-    <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--publish-addon">
+    <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--submit-addon">
       <img class="DevHub-content-image DevHub-content-image--publish-addon"
            src="{{ STATIC_URL }}img/developers/new-landing/publish-my-addon.png"
            srcset="{{ STATIC_URL }}img/developers/new-landing/publish-my-addon.png 1x,
@@ -8,15 +8,13 @@
            alt="" />
     </div>
     <div class="DevHub-content-copy">
-      <h2 class="DevHub-content-header">{{ _('Publish Your Add-on') }}</h2>
+      <h2 class="DevHub-content-header">{{ _('Ready to submit or manage your extension?') }}</h2>
       <p>
         {% trans %}
-        Have an add-on ready? Submit your extension or theme to be
-        listed on addons.mozilla.org or sign and distribute your extension
-        on your own.
+        Sign in to the Developer Hub to submit or manage extensions and themes.
         {% endtrans %}
       </p>
-      <a href="{{ login_link() }}" class="Button">{{ _('Sign In') }}</a>
+      <a href="{{ register_link() }}">{{ _('Register for a developer account or log in to the Developer Hub') }}</a>
     </div>
   </div>
 </section>
