--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -6,7 +6,7 @@
 @extra-small: ~"only screen and (max-width: 399px)";
 @small: ~"only screen and (min-width: 400px)";
 @medium: ~"only screen and (min-width: 700px)";
-@large: ~"only screen and (min-width: 1024px)";
+@large: ~"only screen and (min-width: 960px)";
 @retina: ~"only screen and (min-resolution: 1.5dppx)";
 
 // Fonts
@@ -38,6 +38,7 @@
 // Buttons
 @color-button-default: #0996F8;
 @color-button-primary: #29c978;
+@color-button-register: #015fdf;
 
 // State colors in 'My Addons'
 @color-version-state-disabled: #9b9898;
