--- a/static/css/devhub/new-landing/logo.less
+++ b/static/css/devhub/new-landing/logo.less
@@ -6,13 +6,14 @@
     display: inline-block;
     height: 32px;
     width: 32px;
-    background: url('../../../img/developers/addons-logo-black.svg') no-repeat left center;
+    background: url('../../../img/developers/new-landing/addons-logo-blue.svg') no-repeat left center;
     background-size: contain;
   }
 
   span {
     display: none;
     align-self: center;
+    font-weight: bold;
 
     @media @large {
       display: inline;
