--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -1,6 +1,7 @@
 .DevHub-Navigation {
   > div {
     padding-top: 5px;
+    padding-bottom: 5px;
   }
 
   ul {
@@ -43,16 +44,22 @@
 
       &.DevHub-Navigation-Register,
       &.DevHub-Navigation-SignOut {
+        .Button {
+          .button(@color-items, @color-button-register);
+          padding-left: 15px;
+          padding-right: 15px;
+        }
         @media @large {
-          margin-left: 40px;
+          margin-left: 50px;
+          margin-right: 0px;
 
           a {
             margin: 0 2px;
           }
 
           html[dir=rtl] & {
-            margin-right: 40px;
-            margin-left: 10px;
+            margin-right: 50px;
+            margin-left: 0px;
           }
         }
       }
