overview section style

--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -45,7 +45,7 @@
       &.DevHub-Navigation-Register,
       &.DevHub-Navigation-SignOut {
         .Button {
-          .button(@color-items, @color-button-register);
+          .button(@color-scheme-dark-text, @color-button-register);
           padding-left: 15px;
           padding-right: 15px;
         }
