--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -3,9 +3,7 @@
 
 // Grid
 @grid-max: 960px;
-@extra-small: ~"only screen and (max-width: 399px)";
 @small: ~"only screen and (min-width: 400px)";
-@medium: ~"only screen and (min-width: 700px)";
 @large: ~"only screen and (min-width: 960px)";
 @retina: ~"only screen and (min-resolution: 1.5dppx)";
 
@@ -14,7 +12,7 @@
 
 // Colors
 @color-text: #333;
-@color-items: #fff;
+@color-items:#015fdf;
 @color-callout-border: #FDC900;
 
 // Color Schemes
@@ -27,8 +25,7 @@
 
 // Medium
 @color-scheme-medium-text: #fff;
-@color-scheme-medium-background: #0568ba;
-@color-scheme-medium-items: #29c978;
+@color-scheme-medium-background: linear-gradient(46deg, #E31586, #FC4054, #FF9641);
 
 // Dark
 @color-scheme-dark-text: #fff;
@@ -37,7 +34,7 @@
 
 // Buttons
 @color-button-default: #0996F8;
-@color-button-primary: #29c978;
+@color-button-primary: #fff;
 @color-button-register: #015fdf;
 
 // State colors in 'My Addons'
@@ -169,7 +166,7 @@ h3 {
   font-size: 14px;
 }
 
-@media @medium {
+@media @large {
   h1, h2, h3 {
     font-weight: 400;
   }
