--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -5,7 +5,7 @@
     color: @color-text;
     padding: 20px;
 
-    @media @medium {
+    @media @large {
       margin: 0 auto;
       max-width: @grid-max;
       padding: 0 20px;
@@ -42,7 +42,7 @@
 }
 
 .scheme-medium {
-  background-color: @color-scheme-medium-background;
+  background: @color-scheme-medium-background;
 
   p,
   li {
@@ -51,7 +51,7 @@
 
   &:before,
   &:after {
-    background-color: @color-scheme-medium-background;
+    background: @color-scheme-medium-background;
   }
 }
 
@@ -116,7 +116,7 @@
   padding: 0 20px 20px;
   position: relative;
 
-  @media @medium {
+  @media @large {
     box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 0.15);
     margin: -50px auto 0 auto;
     max-width: 70%;
@@ -196,7 +196,7 @@
   background-repeat: no-repeat;
   background-position: 50% 10px;
 
-  @media @medium {
+  @media @large {
     background-position: 30px 100%;
     background-size: auto 95%;
 
@@ -243,7 +243,7 @@
   }
 }
 
-@media @medium {
+@media @large {
   .DevHub-content-copy,
   .DevHub-content-image-wrapper {
     max-width: 50%;
