--- a/static/css/devhub/new-landing/sections/more-information.less
+++ b/static/css/devhub/new-landing/sections/more-information.less
@@ -4,7 +4,7 @@
     flex-flow: column;
     justify-content: space-between;
 
-    @media @medium {
+    @media @large {
       flex-flow: row nowrap;
       padding: 60px 20px 80px;
     }
