--- a/src/olympia/reviewers/templates/reviewers/base.html
+++ b/src/olympia/reviewers/templates/reviewers/base.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 
-{% block title %}{{ reviewer_page_title() }}{% endblock %}
+{% block title %} Reviewer Tools – Add-ons for Firefox {% endblock %}
+{% block title %} New Add-on Pre-review – Add-ons for Firefox {% endblock %}
+{% block title %} Updated Add-on Pre-review – Add-ons for Firefox {% endblock %}
+{% block title %} Reviewer Performance – Add-ons for Firefox {% endblock %}
+{% block title %} Add-on Review Log – Add-ons for Firefox {% endblock %}
+{% block title %} Auto-approved Add-ons – Add-ons for Firefox {% endblock %}
+{% block title %} Content Review – Add-ons for Firefox {% endblock %}
+{% block title %} New Theme Pre-review – Add-ons for Firefox {% endblock %}
+{% block title %} Updated Theme Pre-review – Add-ons for Firefox {% endblock %}
+{% block title %} Flagged Theme Review – Add-ons for Firefox {% endblock %}
+{% block title %} Theme Review Log – Add-ons for Firefox {% endblock %}
+{% block title %} Review Moderation – Add-ons for Firefox {% endblock %}
+{% block title %} Reviewer Moderation Log – Add-ons for Firefox {% endblock %}
+{% block title %} Unlisted Add-ons – Add-ons for Firefox {% endblock %}
+{% block title %} Deleted Themes Log – Add-ons for Firefox {% endblock %}
+{% block title %} Expired Information Requests – Add-ons for Firefox {% endblock %}
+
 
 {% block bodyclass %}reviewer-tools {% endblock %}
 
