submit and get involved sections style

--- a/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/get_involved.html
@@ -1,6 +1,10 @@
-<section class="DevHub-get-involved scheme-light">
+<section class="DevHub-get-involved scheme-default">
   <div class="DevHub-content-container DevHub-content-container--get-involved">
-    <div class="DevHub-content-copy DevHub-content-copy--get-involved">
+    <div class="DevHub-callout-box DevHub-callout-box--get-involved">
+      <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--get-involved">
+        <img class="DevHub-content-image DevHub-content-image--submit-or-manage-addon"
+             src="{{ STATIC_URL }}img/developers/new-landing/get-involved.png">
+      </div>
       <div>
         <h3>{{ _('Get involved') }}</h3>
         <p>
