--- a/static/css/devhub/new-landing/footer.less
+++ b/static/css/devhub/new-landing/footer.less
@@ -1,6 +1,6 @@
 .DevHub-Footer {
   background-color: @color-scheme-default-background;
-  margin: 60px 0 0;
+  padding: 60px 0 0;
 
   a {
     .link(@color-button-default);
