--- a/static/css/devhub/new-landing/sections/overview.less
+++ b/static/css/devhub/new-landing/sections/overview.less
@@ -1,6 +1,6 @@
 .DevHub-Overview {
-  background: no-repeat bottom left/45% url(../../../img/developers/new-landing/overview-background-left.svg),
-              no-repeat bottom right/45% url(../../../img/developers/new-landing/overview-background-right.svg),
+  background: no-repeat bottom left url(../../../img/developers/new-landing/overview-background-left-small.svg),
+              no-repeat bottom right url(../../../img/developers/new-landing/overview-background-right-small.svg),
               @color-scheme-medium-background;
   > div {
     padding: 40px 5px 155px;
@@ -32,7 +32,7 @@
       .link(@color-scheme-medium-text, @decoration: underline);
     }
 
-    @media @small {
+    @media @large {
       font-size: 20px;
     }
   }
