logged in banner and my addons styling

--- a/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
@@ -1,13 +1,19 @@
-<section class="DevHub-Banner content scheme-light">
-  <div>
-    <h1>{{ _('Build best-in-class extensions and themes') }}</h1>
-    <p>
-      {% trans %}
-        Whether you’re new to extension development, polishing up or porting an
-        existing extension or theme, or creating a custom enterprise solution,
-        we’ve got the resources to support you.
-      {% endtrans %}
-    </p>
-    <a href="https://extensionworkshop.com" class="">{{ _('Visit the Extension Workshop') }}</a>
+<section class="DevHub-Banner scheme-default">
+  <div class="DevHub-content-container DevHub-content-container--banner">
+    <div class="DevHub-callout-box DevHub-callout-box--banner">
+      <div>
+          <h2>{{ _('Build best-in-class extensions and themes') }}</h2>
+      </div>
+      <div>
+        <p>
+          {% trans %}
+            Whether you’re new to extension development, polishing up or porting an
+            existing extension or theme, or creating a custom enterprise solution,
+            we’ve got the resources to support you.
+          {% endtrans %}
+        </p>
+        <a href="https://extensionworkshop.com" class="">{{ _('Visit the Extension Workshop') }}</a>
+      </div>
+    </div>
   </div>
 </section>
