--- a/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
@@ -13,7 +13,7 @@
     </a>
 {% endmacro %}
 
-<div class="DevHub-MyAddons content">
+<div class="DevHub-MyAddons content scheme-default">
   <div>
     <h2>{{ _('My Add-ons') }}</h2>
 
