put some of the header/footer changes back in the box for now

--- a/src/olympia/devhub/templates/devhub/new-landing/components/footer.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="DevHub-Footer content">
+<footer class="DevHub-Footer content show-on-desktop">
   <div>
     <h3 class="DevHub-Footer-sections-header">{{ _('Resources') }}</h3>
 
