--- a/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
@@ -19,12 +19,14 @@
       <li class="show-on-desktop"><a href="https://developer.mozilla.org/en-US/Add-ons">
         {{ _('Documentation') }}
       </a></li>
-
-      <li class="show-on-desktop"><a href="https://developer.mozilla.org/en-US/Add-ons#Contact_us">
+      <li class="hide-on-desktop"><a href="https://developer.mozilla.org/en-US/Add-ons">
+        {{ _('Docs') }}
+      </a></li>
+      <li><a href="https://developer.mozilla.org/en-US/Add-ons#Contact_us">
         {{ _('Support') }}
       </a></li>
 
-      <li class="show-on-desktop"><a href="https://blog.mozilla.org/addons/">
+      <li><a href="https://blog.mozilla.org/addons/">
         {{ _('Blog') }}
       </a></li>
 
