more myaddons section style

--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -1,3 +1,6 @@
+.DevHub-Banner {
+    max-width: @grid-max;
+}
 .DevHub-callout-box--banner {
     background: no-repeat bottom left url(../../../img/developers/new-landing/banner-background.svg);
     margin-top: 20px;
@@ -19,5 +22,3 @@
         }
     }
 }
-
-
