--- a/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/banner.html
@@ -1,9 +1,7 @@
 <section class="DevHub-Banner scheme-default">
   <div class="DevHub-content-container DevHub-content-container--banner">
     <div class="DevHub-callout-box DevHub-callout-box--banner">
-      <div>
-          <h2>{{ _('Build best-in-class extensions and themes') }}</h2>
-      </div>
+      <h2>{{ _('Build best-in-class extensions and themes') }}</h2>
       <div>
         <p>
           {% trans %}
@@ -12,7 +10,7 @@
             we’ve got the resources to support you.
           {% endtrans %}
         </p>
-        <a href="https://extensionworkshop.com" class="">{{ _('Visit the Extension Workshop') }}</a>
+        <a href="https://extensionworkshop.com">{{ _('Visit the Extension Workshop') }}</a>
       </div>
     </div>
   </div>
