--- a/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
@@ -1,5 +1,5 @@
 <nav class="DevHub-Navigation content scheme-light">
-  <div>
+  <div class="DevHub-Navigation-list-wrapper">
     <ul>
       <li>
         <a href="{{ url('devhub.index') }}" class="Logo">
