--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -6,17 +6,17 @@
     margin-top: 20px;
     padding-bottom: 160px;
 
-    > div {
-        display: inline;
+    > h2 {
+        display: inline-block;
     }
 
     @media @large {
         margin: 20px 80px;
         padding-top: 40px;
         padding-bottom:100px;
-        >div:first-child {
+        > h2 {
             float: left;
-            margin: 0px 20px;
+            margin: 16px 20px;
             max-width: 45%;
             min-height: 100%;
         }
