--- a/static/css/devhub/new-landing/sections/my-addons.less
+++ b/static/css/devhub/new-landing/sections/my-addons.less
@@ -1,5 +1,5 @@
 .DevHub-MyAddons > div {
-  margin: 0px;
+  margin: 0;
 }
 
 .DevHub-MyAddons-item {
@@ -33,7 +33,7 @@
   display: flex;
   flex-flow: column;
   overflow-wrap: break-word;
-  min-width: 0px;
+  min-width: 0;
 
   a {
     .link(@color-button-default);
