--- a/src/olympia/devhub/templates/devhub/new-landing/components/submit_or_manage_extension.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/submit_or_manage_extension.html
@@ -2,7 +2,7 @@
   <div class="DevHub-content-container submit-or-manage">
     <div class="DevHub-content-copy">
       <h2 class="DevHub-content-header">{{ _('Ready to submit or manage your extension?') }}</h2>
-      <hr>
+      <div class="Color-Rule"></div>
       <p>
         {% trans %}
         Sign in to the Developer Hub to submit or manage extensions and themes.
@@ -12,7 +12,7 @@
     </div>
     <div class="DevHub-content-image-wrapper DevHub-content-image-wrapper--submit-or-manage-addon">
       <img class="DevHub-content-image DevHub-content-image--submit-or-manage-addon"
-           src="{{ STATIC_URL }}img/developers/new-landing/mozlondon_photo.png">
+           src="{{ STATIC_URL }}img/developers/new-landing/mozlondon_photo.jpeg" alt="developers working on add-ons">
     </div>
   </div>
 </section>
