--- a/static/css/devhub/new-landing/common.less
+++ b/static/css/devhub/new-landing/common.less
@@ -88,17 +88,17 @@
 
 .DevHub-callout-box {
   background: #fff;
-  margin: 0 20px 0px;
+  margin: 0 20px 0;
   padding: 0 20px 20px;
   position: relative;
 
-  box-shadow: 0px 0px1px rgba(32,18,58,0.04);
-  box-shadow: 0px 1px2px rgba(34,0,51,0.04);
-  box-shadow: 0px 2px1px rgba(7,48,114,0.12);
-  box-shadow: 0px 1px6px rgba(14,13,26,0.12);
+  box-shadow: 0 0 1px rgba(32,18,58,0.04);
+  box-shadow: 0 1px 2px rgba(34,0,51,0.04);
+  box-shadow: 0 2px 1px rgba(7,48,114,0.12);
+  box-shadow: 0 1px 6px rgba(14,13,26,0.12);
 
   @media @large {
-    margin: 50px auto 0 auto;
+    margin: 50px auto 0;
   }
 }
 
@@ -147,7 +147,7 @@
   }
 }
 
-hr {
+.Color-Rule {
   width: 40px;
   height: 2px;
   margin-left: 0;
