--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -1,7 +1,7 @@
 .DevHub-Navigation {
-  box-shadow: 0px 4px 16px rgba(12,12,13,0.1);
+  box-shadow: 0 4px 16px rgba(12,12,13,0.1);
 
-  > div {
+  > .DevHub-Navigation-list-wrapper {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
@@ -55,7 +55,7 @@
         }
         @media @large {
           margin-left: 50px;
-          margin-right: 0px;
+          margin-right: 0;
 
           a {
             margin: 0 2px;
@@ -63,7 +63,7 @@
 
           html[dir=rtl] & {
             margin-right: 50px;
-            margin-left: 0px;
+            margin-left: 0;
           }
         }
       }
