--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -6,7 +6,7 @@
     margin-top: 20px;
     padding-bottom: 160px;
 
-    > h2 {
+    h2 {
         display: inline-block;
     }
 
@@ -14,7 +14,7 @@
         margin: 20px 80px;
         padding-top: 40px;
         padding-bottom:100px;
-        > h2 {
+        h2 {
             float: left;
             margin: 16px 20px;
             max-width: 45%;
