adjust footer padding/margin to add white space

--- a/static/css/devhub/new-landing/footer.less
+++ b/static/css/devhub/new-landing/footer.less
@@ -1,6 +1,7 @@
 .DevHub-Footer {
   background-color: @color-scheme-default-background;
-  padding: 60px 0 0;
+  padding: 30px 0 0;
+  margin: 30px 0 0;
 
   a {
     .link(@color-button-default);
