bring back @medium and make some style changes happen at 700px instead

--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -3,6 +3,7 @@
 
 // Grid
 @grid-max: 960px;
+@medium: ~"only screen and (min-width: 700px)";
 @large: ~"only screen and (min-width: 960px)";
 @retina: ~"only screen and (min-resolution: 1.5dppx)";
 
