--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -10,7 +10,7 @@
         display: inline-block;
     }
 
-    @media @large {
+    @media @medium {
         margin: 20px 80px;
         padding-top: 40px;
         padding-bottom:100px;
