--- a/static/css/devhub/new-landing/sections/get-involved.less
+++ b/static/css/devhub/new-landing/sections/get-involved.less
@@ -1,4 +1,4 @@
-@media @large {
+@media @medium {
     .DevHub-content-image-wrapper--get-involved {
         float: right;
         max-width: 200px;
