--- a/static/css/devhub/new-landing/sections/overview.less
+++ b/static/css/devhub/new-landing/sections/overview.less
@@ -5,7 +5,7 @@
   > div {
     padding: 40px 5px 155px;
   }
-  @media @large {
+  @media @medium {
     background: no-repeat bottom left url(../../../img/developers/new-landing/overview-background-left.svg),
                 no-repeat bottom right url(../../../img/developers/new-landing/overview-background-right.svg),
                 @color-scheme-medium-background;
@@ -32,7 +32,7 @@
       .link(@color-scheme-medium-text, @decoration: underline);
     }
 
-    @media @large {
+    @media @medium {
       font-size: 20px;
     }
   }
