center align logged in sections

--- a/static/css/devhub/new-landing/sections/banner.less
+++ b/static/css/devhub/new-landing/sections/banner.less
@@ -1,5 +1,6 @@
 .DevHub-Banner {
     max-width: @grid-max;
+    align-self: center;
 }
 .DevHub-callout-box--banner {
     background: no-repeat bottom left url(../../../img/developers/new-landing/banner-background.svg);
