--- a/src/olympia/devhub/templates/devhub/addons/edit/technical.html
+++ b/src/olympia/devhub/templates/devhub/addons/edit/technical.html
@@ -40,6 +40,7 @@
               {% endif %}
             </td>
           </tr>
+          {% endif %}   
           {% if show_listed_fields %}
           <tr>
             <th>
